code/carts-deploy.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: carts
  namespace: instavote
  labels:
    app: carts
    env: dev
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: carts
        env: dev
    spec:
      containers:
        - name: carts
          image: schoolofdevops/carts
          imagePullPolicy: Always
          ports:
            - containerPort: 80
