code/catalogue-deploy.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: catalogue
  namespace: instavote
  labels:
    app: catalogue
    env: dev
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: catalogue
        env: dev
    spec:
      tolerations:
        - key: "dedicate"
          operator: "Equal"
          value: "catalogue"
          effect: "NoExecute"
      containers:
        - name: catalogue
          image: schoolofdevops/catalogue
          imagePullPolicy: Always
          ports:
            - containerPort: 80
