code/carts-svc.yml
apiVersion: v1
kind: Service
metadata: 
  name: carts
  namespace: instavote
spec:
  selector:
    app: carts
  ports:
    - protocol: TCP
      port: 80
