code/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: front-end
  namespace: instavote
  labels:
    app: front-end
    env: dev
spec:
  selector:
    app: front-end
  ports:
    - protocol: TCP
      port: 8079
